# editor

./: .gitignore  Cargo.toml  Overview.monopic  README.md  mix.exs
lib/: editor.ex
lib/editor/: application.ex  glue.ex  gui.ex  nif.ex
native/editor/: Cargo.toml
native/editor/src/: app.rs  event.rs  glue.rs  gui.rs  models.rs  nifs.rs  notification.rs
src/: app.rs  lib.rs  main.rs
test/: editor_test.exs
test/editor/: glue_test.exs  nif_test.exs
