[package]
edition = "2021"
name = "editor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", rev = "eb0812a9", default-features = false, features = [ "default_fonts", "glow", "persistence" ] }
egui = { git = "https://github.com/emilk/egui.git", rev = "eb0812a9" }
serde = {version = "1", features = ["derive"]}
